CLDIDE-1502: insert auth token of the user in requests to allow performing requests as user